# ngfd-plugin-pulse

./: CMakeLists.txt  README
rpm/: ngfd-plugin-pulse.spec
src/: pulse.c
